tests/snapshots/derive__debug_generic.snap
---
source: tests/derive.rs
expression: "Generic { arg: \"string\" }"
---
>>> pretty
Generic { arg: "string" }

>>> color

[32mGeneric[0m [31m{[0m arg[31m:[0m [33m[0m[31m"[0m[33mstring[0m[31m"[0m[33m[0m [31m}[0m

