tests/snapshots/derive__debug_map.snap
---
source: tests/derive.rs
expression: "BTreeMap::from([(\"hello\", 60), (\"Hello, world! I am a very long string\", 12)])"
---
>>> pretty
{
    "Hello, world! I am a very long string" = 12;
    "hello" = 60;
}

>>> color
[38;2;248;248;242m{[38;2;248;248;242m
[38;2;248;248;242m    [38;2;230;219;116m"[38;2;230;219;116mHello, world! I am a very long string[38;2;230;219;116m"[38;2;248;248;242m [38;2;249;38;114m=[38;2;248;248;242m [38;2;190;132;255m12[38;2;248;248;242m;[38;2;248;248;242m
[38;2;248;248;242m    [38;2;230;219;116m"[38;2;230;219;116mhello[38;2;230;219;116m"[38;2;248;248;242m [38;2;249;38;114m=[38;2;248;248;242m [38;2;190;132;255m60[38;2;248;248;242m;[38;2;248;248;242m
[38;2;248;248;242m}[0m

