tests/snapshots/derive__debug_nested_set.snap
---
source: tests/derive.rs
expression: "BTreeSet::from([Demo { foo: 5, bar: \"hello\" },\n            Demo { foo: 5, bar: \"Hello, world! I am a very long string\" }])"
---
>>> pretty
{
    Demo {
        foo: 5,
        bar: "Hello, world! I am a very long string",
    };
    Demo { foo: 5, bar: "hello" }
}

>>> color

[31m{[0m
    [32mDemo[0m [31m{[0m
        foo[31m:[0m 5[31m,[0m
        bar[31m:[0m [33m[0m[31m"[0m[33mHello, world! I am a very long string[0m[31m"[0m[33m[0m[31m,[0m
    [31m}[0m[31m;[0m
    [32mDemo[0m [31m{[0m foo[31m:[0m 5[31m,[0m bar[31m:[0m [33m[0m[31m"[0m[33mhello[0m[31m"[0m[33m[0m [31m}[0m
[31m}[0m

