tests/snapshots/derive__debug_recursive.snap
---
source: tests/derive.rs
expression: "LinkedList {\n    value: 0_i32,\n    next: Some(Box::new(LinkedList { value: 1_i32, next: None })),\n}"
---
>>> pretty
LinkedList {
    value: 0,
    next: Some(LinkedList { value: 1, next: None }),
}

>>> color
[32mLinkedList[0m [31m{[0m
    value[31m:[0m 0[31m,[0m
    next[31m:[0m Some[31m([0m[32mLinkedList[0m [31m{[0m value[31m:[0m 1[31m,[0m next[31m:[0m None [31m}[0m[31m)[0m[31m,[0m
[31m}[0m


