tests/snapshots/derive__debug_small_set.snap
---
source: tests/derive.rs
expression: "BTreeSet::from([420, 69])"
---
>>> pretty
{
    69;
    420
}

>>> color
[38;2;248;248;242m{[38;2;248;248;242m
[38;2;248;248;242m    [38;2;190;132;255m69[38;2;248;248;242m;[38;2;248;248;242m
[38;2;248;248;242m    [38;2;190;132;255m420[38;2;248;248;242m
[38;2;248;248;242m}[0m

