tests/snapshots/derive__debug_struct.snap
---
source: tests/derive.rs
expression: "Demo { foo: 5, bar: \"hello\" }"
---
>>> pretty
Demo { foo: 5, bar: "hello" }

>>> color
[32mDemo[0m [31m{[0m foo[31m:[0m 5[31m,[0m bar[31m:[0m [33m[31m"[33mhello[31m"[33m[0m [31m}[0m


