tests/snapshots/derive__debug_struct_big.snap
---
source: tests/derive.rs
expression: "Demo { foo: 5, bar: \"Hello, world! I am a very long string\" }"
---
>>> pretty
Demo {
    foo: 5,
    bar: "Hello, world! I am a very long string",
}

>>> color
[38;2;102;217;239mDemo[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m
[38;2;248;248;242m    foo[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m5[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    bar[38;2;248;248;242m:[38;2;248;248;242m [38;2;230;219;116m"[38;2;230;219;116mHello, world! I am a very long string[38;2;230;219;116m"[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m}[0m

