tests/snapshots/derive__raw_idents.snap
---
source: tests/derive.rs
expression: "&r#enum::r#struct { r#fn: () }"
---
>>> pretty
r#struct { r#fn: () }

>>> color
[38;2;248;248;242mr#struct [38;2;248;248;242m{[38;2;248;248;242m r#fn[38;2;248;248;242m:[38;2;248;248;242m [38;2;248;248;242m([38;2;248;248;242m)[38;2;248;248;242m [38;2;248;248;242m}[0m

